--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -143,3 +143,10 @@
     publisher={John Wiley \& Sons},
     note="ISBN: 9780470346396"
 }
+
+@misc{softid-notes,
+    title="Software and Interface Design",
+    author="Alan Blackwell",
+    year="2015",
+    note="University of Cambridge Part IA CST course notes"
+}
